--- a/{{project_name}}/{{module_name}}.py.jinja
+++ b/{{project_name}}/{{module_name}}.py.jinja
@@ -1,1 +1,16 @@
 print("Hello from {{module_name}}!")
+
+def {{module_name}}():
+    return "Hello from {{module_name}}!"
+
+def {{module_name}}2():
+    return "Hello from {{module_name}}2!"
+
+def main():
+    """MY MAIN"""
+    print({{module_name}}())
+    print({{module_name}}2())
+
+if __name__ == "__main__":
+    # execute only if run as a script
+    main()
